added extended challenges

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </html>
 
 
-<script src="script.js"></script>
+<!-- <script src="script.js"></script> -->
+<script src="extendedchallenges.js"></script>
 </body>
 </html>
