made script.js active again on index and added a little css

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> JS Lab 1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   <h1>JS Lab 1</h1> 
+   <p>(plus extended challenges)</p>
 </body>
 </html>
 
-
-<!-- <script src="script.js"></script> -->
+<script src="script.js"></script>
 <script src="extendedchallenges.js"></script>
 </body>
 </html>
